# pytube-downloader

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
pytube_downloader/: app.py  main.py  pytube_downloader.py
pytube_downloader/components/: siderbar.py
pytube_downloader/models/: yt.py
pytube_downloader/models/logging/: __init__.py  formatter.py  logger.py
pytube_downloader/pages/: concat_page.py  downloader_page.py
