[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytube-downloader"
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
aut`ors = [
  { name = "stanleylaw", email = "lawkalaung@gmail.com" },
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dynamic = ["version","dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project.urls]
Documentation = "https://github.com/unknown/pytube-downloader#readme"
Issues = "https://github.com/unknown/pytube-downloader/issues"
Source = "https://github.com/unknown/pytube-downloader"

[tool.hatch.version]
path = "pytube_downloader/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=pytube_downloader --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "pytube_downloader/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
